--- a/packages/proto/public/index.html
+++ b/packages/proto/public/index.html
@@ -15,6 +15,7 @@
             text-align: center;
         }
     </style>
+    <link rel="stylesheet" href="/styles/page.css" />
 </head>
 <body>
     <div class="metric">
