--- a/packages/proto/public/index.html
+++ b/packages/proto/public/index.html
@@ -19,7 +19,9 @@
 </head>
 <body>
     <div class="metric">
-        <h1>Sleep Score</h1>
+        <div class="score-box">
+            <h1>Sleep Score</h1>
+        </div>
         <p id="date"></p>
         <p id="score"></p>
     </div>
