--- a/packages/proto/public/interruptions.html
+++ b/packages/proto/public/interruptions.html
@@ -11,6 +11,7 @@
             list-style-type: none;
         }
     </style>
+    <link rel="stylesheet" href="/styles/page.css" />
 </head>
 <body>
     <a href="index.html">Home</a>
