--- a/packages/proto/public/spo2.html
+++ b/packages/proto/public/spo2.html
@@ -8,6 +8,7 @@
             text-align: center;
         }
     </style>
+    <link rel="stylesheet" href="/styles/page.css" />
 </head>
 <body>
     <a href="index.html">Home</a>
