--- a/packages/proto/public/interruptions.html
+++ b/packages/proto/public/interruptions.html
@@ -12,6 +12,7 @@
         }
     </style>
     <link rel="stylesheet" href="/styles/page.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Handjet:wght@300&family=Sixtyfour&family=Workbench&display=swap" rel="stylesheet">
 </head>
 <body>
     <a href="index.html">Home</a>
