icons not working yet

--- a/packages/proto/public/hours_asleep.html
+++ b/packages/proto/public/hours_asleep.html
@@ -13,7 +13,12 @@
 </head>
 <body>
     <a href="index.html">Home</a>
-    <h1 class="metric">Hours Asleep</h1>
+    <h1 class="metric">
+        <svg class="icon">
+            <use href="/icons/sleep.svg#icon-hours-asleep" />
+          </svg>
+        Hours Asleep
+    </h1>
     <p id="hoursAsleep"></p>
     <p id="bedTime"></p>
     <p id="wakeTime"></p>
