--- a/packages/proto/public/index.html
+++ b/packages/proto/public/index.html
@@ -23,7 +23,12 @@
 <body>
     <div class="metric">
         <div class="score-box">
-            <h1>Sleep Score</h1>
+            <h1>
+                <svg class="icon">
+                    <use href="/icons/sleep.svg#icon-sleeping" />
+                </svg>
+                Sleep Score
+            </h1>
         </div>
         <p id="date"></p>
         <p id="score"></p>
