--- a/packages/proto/public/sleep_stages.html
+++ b/packages/proto/public/sleep_stages.html
@@ -16,7 +16,12 @@
 </head>
 <body>
     <a href="index.html">Home</a>
-    <h1 class="metric">Sleep Stages</h1>
+    <h1 class="metric">
+        <svg class="icon">
+            <use href="/icons/sleep.svg#icon-sleep-stages" />
+        </svg>        
+        Sleep Stages
+    </h1>
     <p id="awake"></p>
     <p id="light"></p>
     <p id="deep"></p>
