--- a/packages/proto/public/interruptions.html
+++ b/packages/proto/public/interruptions.html
@@ -16,7 +16,12 @@
 </head>
 <body>
     <a href="index.html">Home</a>
-    <h1 class="metric">Number of Interruptions</h1>
+    <h1 class="metric">
+        <svg class="icon">
+            <use href="/icons/sleep.svg#icon-interruptions" />
+        </svg>
+        Number of Interruptions
+    </h1>
     <p id="interruptions"></p>
     <h2>Timestamps</h2>
     <ul id="timestamps"></ul>
