--- a/packages/proto/public/spo2.html
+++ b/packages/proto/public/spo2.html
@@ -13,7 +13,12 @@
 </head>
 <body>
     <a href="index.html">Home</a>
-    <h1 class="metric">SpO2 Info</h1>
+    <h1 class="metric">
+        <svg class="icon">
+           <use href="/icons/sleep.svg#icon-sp02" />
+        </svg>
+        SpO2 Info
+    </h1>
     <p id="spo2"></p>
     <script>
         // Generate a random SpO2 value
