reset file done

--- a/packages/proto/public/index.html
+++ b/packages/proto/public/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="/styles/reset.css">
     <title>Sleep Score</title>
     <style>
         body {
             font-family: Lora, sans-serif;
-        }
-        .metric {
-            margin-top: 50px;
-            text-align: center;
         }
         .links {
             margin-top: 20px;
