--- a/packages/proto/public/interruptions.html
+++ b/packages/proto/public/interruptions.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="/styles/reset.css">
     <title>Number of Interruptions</title>
     <style>
         body {
