--- a/packages/proto/public/sleep_stages.html
+++ b/packages/proto/public/sleep_stages.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="/styles/reset.css">
+    <link rel="stylesheet" href="/styles/tokens.css">
     <title>Sleep Stages</title>
     <style>
         body {
