--- a/packages/proto/public/spo2.html
+++ b/packages/proto/public/spo2.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="/styles/reset.css">
+    <link rel="stylesheet" href="/styles/tokens.css">
     <title>SpO2 Info</title>
     <style>
         body {
