--- a/packages/lit-frontend/app/index.html
+++ b/packages/lit-frontend/app/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="/styles/reset.css">
-    <link rel="stylesheet" href="/styles/tokens.css">
+    <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="styles/tokens.css">
     <title>Sleep Score</title>
     <style>
         body {
@@ -13,7 +13,7 @@
             text-align: center;
         }
     </style>
-    <link rel="stylesheet" href="/styles/page.css" />
+    <link rel="stylesheet" href="styles/page.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Handjet:wght@300&family=Sixtyfour&family=Workbench&display=swap" rel="stylesheet">
@@ -23,7 +23,7 @@
         <div class="score-box">
             <h1>
                 <svg class="icon">
-                    <use href="/icons/sleep.svg#icon-sleeping" />
+                    <use href="icons/sleep.svg#icon-sleeping" />
                 </svg>
                 Sleep Score
             </h1>
