--- a/packages/lit-frontend/app/sleep_stages.html
+++ b/packages/lit-frontend/app/sleep_stages.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="/styles/reset.css">
-    <link rel="stylesheet" href="/styles/tokens.css">
+    <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="styles/tokens.css">
     <title>Sleep Stages</title>
     <style>
         body {
@@ -13,14 +13,14 @@
             list-style-type: none;
         }
     </style>
-    <link rel="stylesheet" href="/styles/page.css" />
+    <link rel="stylesheet" href="styles/page.css" />
     <link href="https://fonts.googleapis.com/css2?family=Handjet:wght@300&family=Sixtyfour&family=Workbench&display=swap" rel="stylesheet">
 </head>
 <body>
     <a href="index.html">Home</a>
     <h1 class="metric">
         <svg class="icon">
-            <use href="/icons/sleep.svg#icon-sleep-stages" />
+            <use href="icons/sleep.svg#icon-sleep-stages" />
         </svg>        
         Sleep Stages
     </h1>
