--- a/packages/lit-frontend/app/spo2.html
+++ b/packages/lit-frontend/app/spo2.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="/styles/reset.css">
-    <link rel="stylesheet" href="/styles/tokens.css">
+    <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="styles/tokens.css">
     <title>SpO2 Info</title>
     <style>
         body {
@@ -10,14 +10,14 @@
             text-align: center;
         }
     </style>
-    <link rel="stylesheet" href="/styles/page.css" />
+    <link rel="stylesheet" href="styles/page.css" />
     <link href="https://fonts.googleapis.com/css2?family=Handjet:wght@300&family=Sixtyfour&family=Workbench&display=swap" rel="stylesheet">
 </head>
 <body>
     <a href="index.html">Home</a>
     <h1 class="metric">
         <svg class="icon">
-           <use href="/icons/sleep.svg#icon-sp02" />
+           <use href="icons/sleep.svg#icon-sp02" />
         </svg>
         SpO2 Info
     </h1>
