dropdowns working now

--- a/packages/lit-frontend/app/sleep_stages.html
+++ b/packages/lit-frontend/app/sleep_stages.html
@@ -12,12 +12,26 @@
         #stages li {
             list-style-type: none;
         }
+        .dropdown-content {
+        display: none; /* Hide dropdown content by default */
+        }
+        dropdown[open] .dropdown-content {
+            display: block; /* Show dropdown content when 'open' attribute is present */
+        }
     </style>
     <link rel="stylesheet" href="styles/page.css" />
     <link href="https://fonts.googleapis.com/css2?family=Handjet:wght@300&family=Sixtyfour&family=Workbench&display=swap" rel="stylesheet">
 </head>
 <body>
-    <a href="index.html">Home</a>
+    <dropdown>
+        <button class="dropbutton">Home</button>
+        <div class="dropdown-content" id="dropdownLinks">
+            <a href="index.html">Home</a>
+            <a href="hours_asleep.html">Hours Asleep</a>
+            <a href="spo2.html">SpO2</a>
+            <a href="interruptions.html">Interruptions</a>
+        </div>
+    </dropdown>
     <h1 class="metric">
         <svg class="icon">
             <use href="icons/sleep.svg#icon-sleep-stages" />
@@ -53,5 +67,21 @@ var     awakeTimes = Math.floor(Math.random() * 26);
         document.getElementById('deep').innerText = "Deep Sleep: " + deepPercentage + "%";
         document.getElementById('rem').innerText = "REM: " + remPercentage + "%";
     </script>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+          const dropdown = document.querySelector('dropdown');
+          const toggleButton = dropdown.querySelector('.dropbutton');
+      
+          toggleButton.addEventListener('click', () => {
+            const isOpen = dropdown.hasAttribute('open');
+            if (isOpen) {
+              dropdown.removeAttribute('open');
+            } else {
+              dropdown.setAttribute('open', '');
+            }
+          });
+        });
+      </script>
+    <script type="module" src="../dropdown.ts"></script>
 </body>
 </html>
