added profile page

--- a/packages/lit-frontend/app/hours_asleep.html
+++ b/packages/lit-frontend/app/hours_asleep.html
@@ -12,7 +12,6 @@
         .dropdown-content {
         display: none; /* Hide dropdown content by default */
         }
-
         dropdown[open] .dropdown-content {
             display: block; /* Show dropdown content when 'open' attribute is present */
         }
@@ -28,6 +27,7 @@
             <a href="sleep_stages.html">Sleep Stages</a>
             <a href="spo2.html">SpO2</a>
             <a href="interruptions.html">Interruptions</a>
+            <a href="index.html">Sign Out</a>
         </div>
     </dropdown>
     <script>
