--- a/packages/lit-frontend/app/spo2.html
+++ b/packages/lit-frontend/app/spo2.html
@@ -27,6 +27,7 @@
             <a href="hours_asleep.html">Hours Asleep</a>
             <a href="sleep_stages.html">Sleep Stages</a>
             <a href="interruptions.html">Interruptions</a>
+            <a href="index.html">Sign Out</a>
         </div>
     </dropdown>
     <h1 class="metric">
