--- a/packages/lit-frontend/app/index.html
+++ b/packages/lit-frontend/app/index.html
@@ -12,6 +12,12 @@
             margin-top: 20px;
             text-align: center;
         }
+        .dropdown-content-settings {
+        display: none; /* Hide dropdown content by default */
+        }
+        dropdown[open] .dropdown-content-settings {
+            display: block; /* Show dropdown content when 'open' attribute is present */
+        }
     </style>
     <link rel="stylesheet" href="styles/page.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,6 +25,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Handjet:wght@300&family=Sixtyfour&family=Workbench&display=swap" rel="stylesheet">
 </head>
 <body>
+    <dropdown>
+        <button class="dropbutton-settings">
+            <img src="icons/icon-gear.svg" alt="Menu" style="height:20px; width:20px; border-radius: 30px;">
+        </button>
+        <div class="dropdown-content-settings" id="dropdownLinks">
+            <a href="profile_page.html">Profile Page</a>
+            <a href="index.html">Sign Out</a>
+        </div>
+    </dropdown>
     <div class="metric">
         <div class="score-box">
             <h1>
@@ -59,5 +74,21 @@
         document.getElementById('date').innerHTML = date;
         document.getElementById('score').innerHTML = score + " / 100";
     </script>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+          const dropdown = document.querySelector('dropdown');
+          const toggleButton = dropdown.querySelector('.dropbutton-settings');
+      
+          toggleButton.addEventListener('click', () => {
+            const isOpen = dropdown.hasAttribute('open');
+            if (isOpen) {
+              dropdown.removeAttribute('open');
+            } else {
+              dropdown.setAttribute('open', '');
+            }
+          });
+        });
+      </script>
+    <script type="module" src="../dropdown.ts"></script>
 </body>
 </html>
