--- a/packages/lit-frontend/app/interruptions.html
+++ b/packages/lit-frontend/app/interruptions.html
@@ -39,6 +39,7 @@
             <a href="hours_asleep.html">Hours Asleep</a>
             <a href="sleep_stages.html">Sleep Stages</a>
             <a href="spo2.html">SpO2</a>
+            <a href="index.html">Sign Out</a>
         </div>
     </dropdown>
     <h1 class="metric">
