--- a/packages/lit-frontend/app/sleep_stages.html
+++ b/packages/lit-frontend/app/sleep_stages.html
@@ -30,6 +30,7 @@
             <a href="hours_asleep.html">Hours Asleep</a>
             <a href="spo2.html">SpO2</a>
             <a href="interruptions.html">Interruptions</a>
+            <a href="index.html">Sign Out</a>
         </div>
     </dropdown>
     <h1 class="metric">
