light mode now works for all pages and is sticky

--- a/packages/lit-frontend/app/index.html
+++ b/packages/lit-frontend/app/index.html
@@ -56,7 +56,18 @@
                 }
             });
         });
-        </script>
+        document.addEventListener('DOMContentLoaded', () => {
+        const isLightMode = localStorage.getItem('lightMode') === 'true';
+        document.body.classList.toggle('light-mode', isLightMode);
+
+        // If you're using a custom toggle-switch element on multiple pages,
+        // you may also want to ensure it's in the correct state:
+        const toggleSwitch = document.querySelector('toggle-switch');
+        if (toggleSwitch) {
+            toggleSwitch.setAttribute('on', isLightMode);
+        }
+});
+    </script>
 
     <title>Sleep Score</title>
     <link rel="stylesheet" href="styles/page.css" />
