removed option to sign out

--- a/packages/lit-frontend/app/profile_page.html
+++ b/packages/lit-frontend/app/profile_page.html
@@ -56,7 +56,7 @@
         <p><strong>Name:</strong> John Doe</p>
         <p><strong>Email:</strong> john.doe@example.com</p>
         <p><strong>Member Since:</strong> January 2021</p>
-        <a href="index.html">Sign Out</a>
+        <a href="index.html">Return Home</a>
     </div>
      <div class="toggle-switch">
         <toggle-switch id="toggle-switch">
