--- a/merged-app/public/app/sleep_stages.html
+++ b/merged-app/public/app/sleep_stages.html
@@ -56,11 +56,16 @@
     <div id="chartContainer" style="display: none;"></div>
 
     <script>
+        function getApiBaseUrl() {
+        // Check if running on localhost (development)
+        return window.location.hostname === 'localhost'
+            ? 'http://localhost:3000' // Development base URL
+            : 'https://howdidnaomisleep.us-west-1.elasticbeanstalk.com'; // Production base URL
         async function fetchAndDisplaySleepStages() {
             let awakePercentage, lightPercentage, deepPercentage, remPercentage;
 
             try {
-                const response = await fetch('http://localhost:3000/api/sleep');
+                const response = await fetch(`${getApiBaseUrl()}/api/sleep`);
                 if (!response.ok) {
                     throw new Error('Failed to fetch sleep data');
                 }
@@ -200,6 +205,7 @@
                 .attr('fill', defaultTextColor) // Set the text color to the default text color
                 .text(function(d) { return d.stage; });
             }
+        }
         
             document.addEventListener('DOMContentLoaded', fetchAndDisplaySleepStages);
         </script>
