--- a/merged-app/public/app/hours_asleep.html
+++ b/merged-app/public/app/hours_asleep.html
@@ -71,9 +71,14 @@
     <p id="wakeTime"></p>
     
     <script>
+        function getApiBaseUrl() {
+        // Check if running on localhost (development)
+        return window.location.hostname === 'localhost'
+            ? 'http://localhost:3000' // Development base URL
+            : 'https://howdidnaomisleep.us-west-1.elasticbeanstalk.com'; // Production base URL
         async function fetchSleepData() {
             try {
-                const response = await fetch('http://localhost:3000/api/sleep');
+                const response = await fetch(`${getApiBaseUrl()}/api/sleep`);
                 if (!response.ok) {
                     throw new Error('Failed to fetch sleep data');
                 }
@@ -90,6 +95,7 @@
                 console.error('Error fetching sleep data:', error);
             }
         }
+    }
 
         document.addEventListener('DOMContentLoaded', fetchSleepData);
     </script>
